# boltzmann-conductivity

./: .gitattributes  .gitignore  .readthedocs.yaml  README.md  bandstructure.py  pyproject.toml
.github/workflows/: publish.yml
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/api/: bandstructure.rst  conductivity.rst  fit.rst  index.rst  kernel.rst  load.rst  params.rst  scattering.rst
doc/source/tutorial/: fit.rst  index.rst  install.rst  kernel.rst  params.rst  quickstart.rst
elecboltz/: __init__.py  banded.py  bandstructure.py  conductivity.py  fit.py  integrate.py  kernel.py  kernels.py  load.py  params.py  scatkernel.py  scatrate.py  scattering.py  solve.py
examples/: ADMR_NdLSCO_FEM_vs_Chambers.ipynb  ADMR_PdCoO2_FEM_vs_Chambers.ipynb  Compare_Kernel_Decomposition.py  Explore_Cylindrical_Harmonics.py  Explore_Gaussian_Scattering.py  Fit_ADMR_NdLSCO.ipynb  Forward_vs_Backward_Scattering.ipynb  PdCrO2_fem_vs_chambers.ipynb  boltzmann_vs_drude.ipynb  convergence.ipynb  magnetoresistance_fem_vs_chambers.ipynb  scattering_kernel_drude.ipynb
introduction/: FEM_boltzmann_2D_free_electrons.ipynb
introduction/document/: FEM_boltzmann_conductivity.tex  FEM_boltzmann_conductivity_introduction.tex
introduction/document/figures/: triangular_element.ipynb
minimal/: FEM_boltzmann_minimum.py  mpl_defaults.py
scripts/: Fit_ADMR_NdLSCO_Kernel.py  Plot_Fit_ADMR.py  Plot_Fit_ADMR_Kernel.py
tests/: drude.py  test_bandstructure.py  test_cyclic_banded_inverse.py  test_drude.py  test_flat_dictionary.py  test_geometrical_calculations.py  test_loader.py
