[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "elecboltz"
version = "0.1.1"
authors=[{name = "Saleh Shamloo Ahmadi", email = "slhshamloo@gmail.com"}]
description = "Boltzmann transport for conductivity of materials using an FEM"
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.12.0",
    "sympy>=1.10.1",
    "scikit-image>=0.22.0"
]
readme = "README.md"
license = "MIT"

[tool.setuptools]
packages = ["elecboltz"]
