[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "elecboltz"
version = "0.2.1"
authors=[{name = "Saleh Shamloo Ahmadi", email = "slhshamloo@gmail.com"}]
description = "Boltzmann transport for conductivity of materials using an FEM"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.12.0",
    "sympy>=1.10.1",
    "scikit-image>=0.22.0"
]
readme = "README.md"
license = "MIT"

[project.urls]
homepage = "https://github.com/slhshamloo/boltzmann-conductivity"
documentation = "https://elecboltz.readthedocs.io/"
repository = "https://github.com/slhshamloo/boltzmann-conductivity"
issues = "https://github.com/slhshamloo/boltzmann-conductivity/issues"

[tool.setuptools]
packages = ["elecboltz"]
