[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "elecboltz"
dynamic = ["version"]
authors=[{name = "Saleh Shamloo Ahmadi", email = "slhshamloo@gmail.com"}]
description = "Boltzmann transport for conductivity of materials using an FEM"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.12.0",
    "sympy>=1.10.1",
    "scikit-image>=0.22.0"
]
readme = "README.md"
license = "MIT"

[project.urls]
homepage = "https://github.com/slhshamloo/boltzmann-conductivity"
documentation = "https://elecboltz.readthedocs.io/"
repository = "https://github.com/slhshamloo/boltzmann-conductivity"
issues = "https://github.com/slhshamloo/boltzmann-conductivity/issues"

[tool.setuptools]
packages = ["elecboltz"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
